fix(calendar): agenda popup visibility on routing

--- a/src/modules/calendar/calendar.css
+++ b/src/modules/calendar/calendar.css
@@ -1,6 +1,6 @@
 #logseq-agenda_lsp_main#logseq-agenda_lsp_main {
     z-index: 3 !important;
-    width: calc(100% - var(--ls-left-sidebar-width) - var(--awUI-calc-right-sidebar-width, var(--ls-right-sidebar-width)));
+    width: calc(100% - var(--awUI-calc-left-sidebar-width, var(--ls-left-sidebar-width)) - var(--awUI-calc-right-sidebar-width, var(--ls-right-sidebar-width)));
     height: calc(100% - var(--awUI-tabs-height) - var(--awUI-head-height))!important;
     left: var(--ls-left-sidebar-width);
     right: var(--awUI-calc-right-sidebar-width, var(--ls-right-sidebar-width));
